--- a/public/css/common.css
+++ b/public/css/common.css
@@ -6,12 +6,15 @@
     margin: 0;
     padding: 0;
 }
+html {
+    font-size: 16px;
+}
 
 body {
     background-color: rgb(0, 142, 142);
     font-family: '微软雅黑', Arial;
     color: #FFFFFF;
-    /*word-break:break-all;*/
+    font-size: 1rem;
 }
 
 #background-img {
@@ -46,13 +49,13 @@ body {
 }
 
 .btn {
-    margin-right: 5px;
+    margin-right: .5rem;
     color: #fff;
     background-color: rgba(37, 39, 48, .6);
     padding: 0.7em 1.5em;
-    font-size: 1em;
+    font-size: 1.6rem;
     border: none;
-    border-radius: 4px;
+    border-radius: .4rem;
     cursor: pointer;
     font-weight: bold;
     outline: none;
@@ -87,17 +90,17 @@ a:hover {
 input{
     width: 100%;
     background-color: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: .1rem solid rgba(0, 0, 0, 0.15);
     outline: none;
     color: rgba(0, 0, 0, 0.7);
     border-radius: 0.3125em;
     box-sizing: border-box;
-    font-size: 1em;
+    font-size: 1.6rem;
     padding: 0.65em 1em;
 }
 
 .translate {
-    -webkit-transform:translate(-9999px);
+    -webkit-transform:translate(-999rem);
     -webkit-transition: .6s linear;
     -moz-transition: .6s linear;
     -ms-transition: .6s linear;
@@ -106,75 +109,72 @@ input{
 }
 
 .h0 {
-    height: 0px;
+    height: 0rem;
 }
 .w0{
-    width: 0px;
+    width: 0rem;
 }
 #login_content{
-    max-width: 400px;
-    margin: 150px auto;
+    max-width: 40rem;
+    margin: 15rem auto;
 }
 form {
-    max-width: 400px;
+    max-width: 40rem;
     padding: 1em;
     background-color: rgba(0,48,70,0.2);
-    border-radius: 5px;
-    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
+    border-radius: .5rem;
+    box-shadow: 0px 0px 0px .1rem rgba(0, 0, 0, 0.1);
 }
 form .field{
     clear: both;
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
 }
 
 form .field label {
-    margin-bottom: 3px;
+    margin-bottom: .3rem;
     display: block;
 }
 
 #menu img,
 .face {
-    width: 100px;
-    height: 100px;
+    width: 10rem;
+    height: 10rem;
 }
 
 .loading-bar {
     width: 0%;
-    height: 3px;
+    height: .3rem;
     background-color: #32D88D;
     position: relative;
     transition: width .5s ease-in;
 }
 
 #message {
-    min-width: 100px;
-    padding: 15px 5px 15px 5px;
+    min-width: 10rem;
+    padding: 1.5rem .5rem 1.5rem .5rem;
     opacity: 0;
     text-align: center;
     position: fixed;
-    top: 100px;
+    top: 1rem;
     color: #73E064;
     font-weight: 700;
-    border-radius: 4px;
+    border-radius: .4rem;
     background-color: rgba(0, 48, 70, .8);
     transition: .4s;
     z-index: 1;
 }
 
 .crumbs {
+    margin: .3rem;
     background-color: rgba(37, 39, 48, 0.6);
-    padding: 10px;
+    padding: 1rem;
     color: #a2a2a2;
-    border-radius: 4px;
-}
-
-.crumbs a {
-    color: #dfdfdf;
+    border-radius: .4rem;
 }
 
 .container {
     margin: 0 auto;
-    padding: 10px;
+    padding: 1rem;
     transition: .25s linear;
     position: relative;
 }
@@ -191,35 +191,62 @@ form .field label {
 }
 
 .item {
-    width: 100%;
+    width: 21.5%;
     height: auto;
-    border-radius: 4px;
-    float: left;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    margin: .3rem;
+    border-radius: .4rem;
+    overflow: hidden;
+    display: inline-block;
+    position: relative;
     background-color: rgba(37, 39, 48, 0.6);
     transition: opacity 3s linear;
 }
-
 .item:hover {
     background-color: rgba(37, 39, 48, 0.8);
 }
+.item img{
+    width: 100%;
+    height: 100%;
+    float: left;
+}
+.item .content {
+    width: 100%;
+    height: 100%;
+    padding: .4rem;
+    position: absolute;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+.item header {
+    font-weight: bold;
+    color: #ffffff;
+    font-size: .8rem;
+}
+.item footer {
+    font-weight: bold;
+    color: #ffffff;
+    text-align: right;
+    font-size: 2rem;
+}
+.item footer div {
+    font-size: 0rem;
+}
 
 .face {
-    width: 30px;
-    height: 30px;
+    width: 3rem;
+    height: 3rem;
     vertical-align: middle;
-    border-radius: 6px;
+    border-radius: .6rem;
 }
 
 .left-panel {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .post-panel {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     background-color: rgba(37, 39, 48, 0.6);
 }
 
@@ -231,11 +258,11 @@ form .field label {
 }
 
 .loader > div {
-    width: 32px;
-    font-size: 15px;
+    width: 3.2rem;
+    font-size: 1.5rem;
     padding-top: 2.5em;
     display: inline-block;
-    background: url(../pic/loader.gif) no-repeat center 5px;
+    background: url(../pic/loader.gif) no-repeat center .5rem;
 }
 
 .loader span {
@@ -246,10 +273,10 @@ form .field label {
     transition: .1s linear;
 }
 .case-border:hover {
-    -webkit-box-shadow: 0 0 20px #33FF66;
-    -o-box-shadow:  0 0 20px #074A99;
-    -moz-box-shadow: 0 0 20px #074A99;
-    box-shadow: 0 0 20px #0066ff;
+    -webkit-box-shadow: 0 0 2rem #33FF66;
+    -o-box-shadow:  0 0 2rem #074A99;
+    -moz-box-shadow: 0 0 2rem #074A99;
+    box-shadow: 0 0 2rem #0066ff;
     opacity: .8;
 }
 
@@ -261,9 +288,9 @@ form .field label {
         position: relative;
     }
     .menu {
-        width: 100px;
-        height: 100px;
-        border-radius: 6px;
+        width: 10rem;
+        height: 10rem;
+        border-radius: .6rem;
         position: absolute;
     }
     #pig-canvas {
@@ -284,7 +311,7 @@ form .field label {
 }
 @media screen and (min-width:625px) and (min-height:625px){
     #menu-wrapper {
-        margin-top: 30px;
+        margin-top: 3rem;
         width: 500px;
         height: 500px;
         margin: 0 auto;
@@ -311,9 +338,9 @@ form .field label {
         animation-timing-function: linear;
     }
     .menu {
-        width: 200px;
-        height: 200px;
-        border-radius: 100px;
+        width: 20rem;
+        height: 20rem;
+        border-radius: 10rem;
         display: inline-block;
         position: absolute;
     }
@@ -371,20 +398,26 @@ form .field label {
         width: 736px;
         margin: 0 auto;
     }
-
-    .item {
-        width: 47.2%;
-        margin: 10px;
-    }
-
-    .crumbs {
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
     .topic-ul {
         list-style: none;
         margin: 10px;
+    }
+    .item {
+        width: 18.6%;
+    }
+
+    .item .content{
+        padding: .8rem;
+    }
+
+    .item header {
+        font-size: 1.5rem;
+    }
+    .item footer {
+        font-size: 2rem;
+    }
+    .item footer div {
+        font-size: 1.6rem;
     }
 
     .face {
@@ -419,9 +452,17 @@ form .field label {
     .container {
         width: 900px;
     }
-
     .item {
-        width: 280px;
+        width: 18.8%;
+    }
+    .item header {
+        font-size: 1.5rem;
+    }
+    .item footer {
+        font-size: 3rem;
+    }
+    .item footer div {
+        font-size: 1.6rem;
     }
 }
 
@@ -429,9 +470,17 @@ form .field label {
     .container {
         width: 1160px;
     }
-
     .item {
-        width: 270px;
+        width: 19.1%;
+    }
+    .item header {
+        font-size: 2rem;
+    }
+    .item footer {
+        font-size: 4rem;
+    }
+    .item footer div {
+        font-size: 1.6rem;
     }
 
     .left-panel {
@@ -523,7 +572,7 @@ form .field label {
 .topic-right h2 a {
     color: #f5f5f5;
     padding: 3px 5px;
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: 500;
     font-family: "微软雅黑";
 }
@@ -567,7 +616,7 @@ form .field label {
     width: 110px;
     font-family: "微软雅黑";
     font-weight: 700;
-    font-size: 21px;
+    font-size: 2.1rem;
     cursor: pointer;
     transition: .25s linear;
 }
@@ -655,11 +704,11 @@ form .field label {
 }
 
 .left-panel .inline-block div:first-child {
-    font-size: 30px;
+    font-size: 3rem;
 }
 
 .left-panel .inline-block div:last-child {
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 700;
 }
 
