--- a/public/css/common.css
+++ b/public/css/common.css
@@ -464,6 +464,9 @@ form .field label {
     display: inline-block;
     margin: 0 .5rem;
 }
+.category-profile .option:last-child{
+    min-width: 8rem;
+}
 .category-profile .option strong {
     display: block;
 }
@@ -488,11 +491,13 @@ form .field label {
     }
 
     .left-panel {
-        margin: 10px;
+        float: left;
+        width: 49.5%;
     }
 
     .post-panel {
-        margin: 10px;
+        float: right;
+        width: 49.5%;
     }
 
     .loader {
@@ -520,12 +525,12 @@ form .field label {
 
     .left-panel {
         float: left;
-        width: 40%;
+        width: 49.5%;
     }
 
     .post-panel {
         float: right;
-        width: 56%;
+        width: 49.5%;
     }
 }
 
@@ -668,7 +673,7 @@ form .field label {
     background-color: rgba(37, 39, 48, 0.6);
 }
 
-.face-panel a {
+.face-panel label {
     position: relative;
     display: inline-block;
 }
@@ -688,6 +693,10 @@ form .field label {
     opacity: 0;
     cursor: pointer;
     transition: opacity .1s linear;
+}
+
+#changeFace:hover{
+    opacity: 0.8;
 }
 
 .title {
@@ -726,7 +735,7 @@ form .field label {
     height: 100%;
     position: absolute;
     top: 0px;
-    display: none;
+    /*display: none;*/
 }
 
 .modal {
@@ -742,6 +751,10 @@ form .field label {
 
 .modal-header {
     border-bottom: 1px solid #cccccc;
+}
+.modal-header h3 {
+    padding: .4rem;
+    margin-right: 1rem;
 }
 
 .modal-footer {
@@ -762,7 +775,7 @@ form .field label {
     color: #000;
     display: none;
     background-color: #73E064;
-    font-family: "黑体";
+    overflow: hidden;
 }
 
 /*编辑器*/
@@ -817,4 +830,10 @@ form .field label {
 }
 .rte-toolbar .submit:hover {
     color: #6196F9;
+}
+/*备案*/
+.beian{
+    position: fixed;
+    bottom: 0;
+    left:0;
 }
