发送3次请求的bug

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -33,9 +33,9 @@ body {
     background-size: cover;
 }
 
-.ng-view{
-    position: relative;
-}
+/*.ng-view{*/
+    /*position: relative;*/
+/*}*/
 .show{
     display: block;
 }
