--- a/public/css/common.css
+++ b/public/css/common.css
@@ -992,22 +992,35 @@ form .field label {
     top: 0px;
     padding: 0;
     position: fixed;
+    display: none;
     box-sizing: border-box;
 }
 .chat-panel .chat-dialog{
     padding: 1rem;
     width: 100%;
-    height: 100%;
+    height: 96%;
+    overflow-x: hidden;
+    overflow-y: auto;
     background: rgba(37,39,48,0.6);
     box-sizing: border-box;
 }
 .chat-input{
-    position: fixed;
+    position: absolute;
     width: 100%;
     left: 0px;
     bottom: 2rem;
     padding: 0 4rem;
     box-sizing: border-box;
+}
+.chat-panel .chat-dialog .chat{
+    margin: 5px;
+}
+.chat-panel .chat-dialog .chat img{
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    border-radius: 100%;
+    vertical-align: sub;
 }
 
 @media screen and (min-width: 480px){
