--- a/public/css/common.css
+++ b/public/css/common.css
@@ -53,16 +53,21 @@ body {
     font-family: '微软雅黑', Arial;
     color: #FFFFFF;
     font-size: 1rem;
+    background: url(../images/bg.jpg) fixed no-repeat center center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-#background-img {
-    top: 0 !important;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    background: url(../images/bg.jpg) fixed;
-    background-size: cover;
-}
+/*#background-img {*/
+    /*top: 0 !important;*/
+    /*height: 100%;*/
+    /*width: 100%;*/
+    /*position: fixed;*/
+    /*background: url(../images/bg.jpg) fixed;*/
+    /*background-size: cover;*/
+/*}*/
 
 /*.ng-view{*/
 /*position: relative;*/
