修复离线状态，socke断开连接计数bug，看到自己聊天记录，消息滚动到底部

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -992,6 +992,9 @@ form .field label {
     width: 35px;
     height: 35px;
 }
+.modal-body.message .personal{
+    color: lawngreen;
+}
 
 .progressbar {
     width: 0%;
