--- a/public/css/common.css
+++ b/public/css/common.css
@@ -868,7 +868,7 @@ form .field label {
     line-height: 100px;
     position: absolute;
     background-color: rgba(37, 39, 48, 0.8);
-    bottom: 0px;
+    top: 0px;
     opacity: 0;
     cursor: pointer;
     transition: opacity .1s linear;
