--- a/public/css/common.css
+++ b/public/css/common.css
@@ -53,7 +53,7 @@ body {
     font-family: '微软雅黑', Arial;
     color: #FFFFFF;
     font-size: 1rem;
-    background: url(../images/bg.jpg) fixed no-repeat center center;
+    background: url(../images/bg_sky.jpg) fixed no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -354,7 +354,7 @@ form .field label {
     font-size: 1.5rem;
     padding-top: 2.5em;
     display: inline-block;
-    background: url(../pic/loader.gif) no-repeat center .5rem;
+    /*background: url(../pic/loader.gif) no-repeat center .5rem;*/
 }
 
 .loader span {
@@ -589,7 +589,8 @@ form .field label {
 }
 
 .category-profile .option:last-child {
-    min-width: 5rem;
+    min-width: 6rem;
+    text-align: left;
 }
 
 .category-profile .option strong {
